--- a/bootstrap_stater/src/main/resources/templates/commute/annual_list.html
+++ b/bootstrap_stater/src/main/resources/templates/commute/annual_list.html
@@ -28,12 +28,16 @@
 						<i class="fa-solid fa-circle-user annPerson"></i>
 					</div>
 					<div class="d-flex align-items-start">
-						<div class="card-body" id="MyAnnArea" style="height: 293px">
+						<div class="card-body" id="MyAnnArea" style="height: 315px">
 							<table id ="MyAnnAreaTable" class="table table-bordered">
 								<tbody>
 									<tr>
 										<th>이름</th>
 										<td th:text="${myAnn != null} ? ${myAnn.empName} : '데이터 없음'"></td>
+							        </tr>
+							        <tr>
+										<th>부서</th>
+										<td th:text="${myAnn != null} ? ${myAnn.depName} : '-'"></td>
 							        </tr>
 							        <tr>
 							            <th>연차 산정 기간</th>
